// $Id: CHANGELOG.txt,v 1.14.2.16.2.30 2009/03/05 14:09:36 morbus Exp $

Bot 6.x-1.x, xxxx-xx-xx
-----------------------
  * #380330: Added perms for factoids, karma, and project (thanks lut4rp).
  * #391916: bot_log needed another index for speedier table SELECTs.

Bot 6.x-1.1, 2009-02-10
-----------------------
  * bot_seen ping prevention matched inside strings; now only word boundaries.
  * #284666: We now use preg_quote() for various nickname escaping.
  * #349245: bot_tell doesn't consume username whitespace (thanks drewish).
  * #356003: bot_tell sorts queued messages by oldest first (thanks litwol).
  * #343245: Better regex for usernames like betz--; supports betz---- now.
  * #338723: Missing decode_entities() on project statuses (thanks RobLoach).
  * #313025: Better regex for log filtering to prevent substring matches.
  * #300206: Better factoid-ignoring of tell-like messages (thanks RobLoach).
  * #275042: Randomized messages now centralized in bot_randomized_choice().
  * #274888: Move all INSERTs and UPDATEs to use drupal_write_record().
  * #218577: bot_tell.module added (thanks Rob Loach). Additions/changes:
    - pending message queue now exists to remove SELECT on every message.
    - received messages use format_interval(), not a date (thanks litwol).
  * bot_factoid: PM a factoid with "BOTNAME: tell <who> about <factoid>".
  * #190825: Get URL to current logged discussion with "BOTNAME: log pointer?"
  * bot_name_regexp() now exists for matching inside a regular expression.
    - #117876: if bot has a nick clash, it now responds to both nicks.
    - #184015: bot name with non-word characters failed regexp addressing.
  * #137171: bot_karma.module added (thanks walkah/Rob Loach). Additions:
    - patch supported only words: committed version supports phrases.
    - if someone tries to karma themselves, the response is customizable.
    - drupal_write_record() is your friend; get used to using it!